cmake_minimum_required(VERSION 3.19)
project(ReEnergized LANGUAGES CXX)

option(CMAKE_VIRTUAL_DIRECTORIES "Add virtual directories to .vcxproj project files." ON)
option(CMAKE_SUBMODULES "Fetch all submodules recursively." ON)

find_package(Git QUIET)
if(GIT_FOUND AND EXISTS "${PROJECT_SOURCE_DIR}/.git")
  if(CMAKE_SUBMODULES)
    message(STATUS "Running git submodule update --init --recursive, please wait.")
    execute_process(COMMAND ${GIT_EXECUTABLE} submodule update --init --recursive WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} RESULT_VARIABLE RESULT)
    if(NOT RESULT EQUAL "0")
      message(FATAL_ERROR "git submodule update --init --recursive failed with ${GIT_SUBMOD_RESULT}, please checkout submodules.")
    endif()
  endif()
endif()

function(target_add_virtual_directories target_name)
  if(CMAKE_VIRTUAL_DIRECTORIES)
    message(STATUS "Adding virtual directories in .vcxproj project files, please wait.")
    get_target_property(target_sources  "${target_name}" SOURCES)
    foreach(file_name IN LISTS target_sources)
      get_filename_component(dir_name "${file_name}" PATH)
      string(REPLACE "/" "\\" group_name "${dir_name}")
      source_group("${group_name}" FILES "${file_name}")
    endforeach()
  endif()
endfunction()

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_DISABLE_SOURCE_CHANGES ON)
set(CMAKE_DISABLE_IN_SOURCE_BUILD ON)
if ("${CMAKE_SOURCE_DIR}" STREQUAL "${CMAKE_BINARY_DIR}")
    message(SEND_ERROR "In-source builds are not allowed.")
endif()

add_subdirectory(src)
